[package]
name = "stake-manager"
version = "0.1.0"
edition = "2021"


exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { workspace = true, features = ["staking", "stargate"] }
cw2 = { workspace = true }
cw20 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde-json-wasm = { workspace = true }
cw-storage-plus = { workspace = true, features = ["iterator"] }
# neutron-sdk = { git = "https://github.com:stafihub/neutron-sdk", branch = "hotfix/kv-delegations", default-features = false }
neutron-sdk = { path = "../../packages/neutron-sdk", default-features = false }
cosmos-sdk-proto = { workspace = true }
rtoken = { path = "../rtoken", features = ["library"] }
thiserror = "1.0.50"

[dev-dependencies]
cosmwasm-schema = { workspace = true }
